[gd_scene load_steps=8 format=3 uid="uid://cs71vpxi4b22q"]

[ext_resource type="Script" uid="uid://d3y4k1330ef8" path="res://scenes/composable/Lever.gd" id="1_tbat4"]
[ext_resource type="Texture2D" uid="uid://cvc1sa5wf7rrh" path="res://assets/interactables/lever/lever_off.png" id="2_wqnlg"]
[ext_resource type="Texture2D" uid="uid://cy3ehdeou5wqi" path="res://assets/interactables/lever/lever_on.png" id="3_q5tqy"]
[ext_resource type="AudioStream" uid="uid://d1isk4f14axrm" path="res://assets/sound/lever_pull.mp3" id="4_rgjmx"]
[ext_resource type="AudioStream" uid="uid://cabxibgf7xkrv" path="res://assets/sound/lever_tick.mp3" id="5_t0fqj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2iqb0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wqnlg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_q5tqy")
}],
"loop": true,
"name": &"on",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gfrd"]
size = Vector2(20, 33.7319)

[node name="Lever" type="Area2D"]
position = Vector2(374, 463)
collision_layer = 4
script = ExtResource("1_tbat4")

[node name="LeverSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(15.0024, 4.00244)
scale = Vector2(1.80001, 1.80001)
sprite_frames = SubResource("SpriteFrames_2iqb0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(49.0024, -28.6575)
scale = Vector2(30.1556, -21.0687)
shape = SubResource("RectangleShape2D_3gfrd")

[node name="LeverPull" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rgjmx")
volume_db = -12.0

[node name="LeverTick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_t0fqj")

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
